--- a/Lesson02-GitHub-Repo-Search/T02.04-Exercise-ConnectingToTheInternet/app/src/main/AndroidManifest.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.04-Exercise-ConnectingToTheInternet/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.android.datafrominternet">
 
-    <!--TODO (1) Add the INTERNET permission-->
+    <!--COMPLETED(1) Add the INTERNET permission-->
+    <uses-permission android:name="android.permission.internet"/>
+
 
     <application
         android:allowBackup="true"
