--- a/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/build.gradle
+++ b/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.example.android.datafrominternet"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
