--- a/Lesson08-Quiz-Example/T08.01-Exercise-AddTheContentProviderPermission/app/src/main/AndroidManifest.xml
+++ b/Lesson08-Quiz-Example/T08.01-Exercise-AddTheContentProviderPermission/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.udacity.example.quizexample">
 
-    <!-- COMPLETED (1) Add the correct permission to access the DroidTermsExample content provider -->
-    <uses-permission android:name="com.example.udacity.droidtermsexample.TERMS_READ"/>
-
+    <!-- TODO (1) Add the correct permission to access the DroidTermsExample content provider -->
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
