--- a/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
@@ -5,11 +5,13 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
+
         applicationId "com.example.android.boardingpass"
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -21,7 +23,9 @@ android {
 }
 
 dependencies {
+  //  classpath 'com.android.tools.build:gradle:OLDER_GRADLE_VERSION_THAT_YOUR'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
-    // TODO (1) Add the compile dependency for the constraint layout support library
+    // COMPLETED (1) Add the compile dependency for the constraint layout support library
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
