Working on TODO 'boadingInfo' issues

--- a/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     // COMPLETED (1) Enable Data Binding in your application
-    dataBinding.enabled = true;
+    dataBinding.enabled = true
 }
 
 dependencies {
