--- a/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/build.gradle
@@ -1,17 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
-
 allprojects {
     String osName = System.getProperty("os.name").toLowerCase();
     if (osName.contains("windows")) {
@@ -19,9 +14,9 @@ allprojects {
     }
     repositories {
         jcenter()
+        google()
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
