--- a/Lesson10-Hydration-Reminder/T10.06-Exercise-StickyBroadcastForCharging/app/build.gradle
+++ b/Lesson10-Hydration-Reminder/T10.06-Exercise-StickyBroadcastForCharging/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.example.android.background"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -14,11 +15,13 @@ android {
         release {
             minifyEnabled false
         }
+
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
     compile 'com.firebase:firebase-jobdispatcher:0.5.2'
+    compile 'com.android.support:multidex:1.0.0'
 }
